--- a/src/GUI/Frame_Supplier.form
+++ b/src/GUI/Frame_Supplier.form
@@ -29,14 +29,12 @@
                   <Component id="label_nohp" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="label_nama" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="label_alamat" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="label_id" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                   <Component id="txt_nama" pref="433" max="32767" attributes="0"/>
                   <Component id="txt_nohp" alignment="0" max="32767" attributes="0"/>
                   <Component id="txt_alamat" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txt_id" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
@@ -57,12 +55,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="label_id" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txt_id" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="label_nama" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txt_nama" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -79,7 +72,7 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="simpan_btn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="27" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -97,11 +90,6 @@
         <Property name="text" type="java.lang.String" value="Input Informasi Supplier"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="label_id">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="ID "/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="label_nama">
       <Properties>
         <Property name="text" type="java.lang.String" value="Nama"/>
@@ -116,11 +104,6 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Alamat"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txt_id">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_idActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_nama">
     </Component>
