--- a/src/GUI/Frame_DetailBelanja.form
+++ b/src/GUI/Frame_DetailBelanja.form
@@ -209,16 +209,22 @@
         <Component class="javax.swing.JTable" name="tab_detailBelanja">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="0">
+              <Table columnCount="6" rowCount="0">
                 <Column editable="true" title="id" type="java.lang.Object"/>
                 <Column editable="true" title="nama_Produk" type="java.lang.Object"/>
                 <Column editable="true" title="kategori" type="java.lang.Object"/>
                 <Column editable="true" title="harga_Jual" type="java.lang.Object"/>
                 <Column editable="true" title="Jumlah" type="java.lang.Object"/>
+                <Column editable="true" title="Total Harga" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
